# example-blog-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: blog_api.rs  lib.rs  main.rs  ui_helpers.rs
src/buffered/: mod.rs  value.rs  vec.rs
