[package]
name = "example_blog_client"
version = "0.4.0-beta2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  {version="1", features=["rt-multi-thread", "sync", "macros"]}
eframe = "0.21"
egui_extras = {version="0.21", features=["image","svg"]}
reqwest = {version="0.11", features=["serde_json", "json", "cookies"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
chrono = "0.4"
lazy_async_promise = "0.4.0"
egui_commonmark = {version="0.7.1", features=["syntax_highlighting"]}